--- a/src/styles/root.css
+++ b/src/styles/root.css
@@ -1,4 +1,6 @@
 :root {
-    --bgColor: #fff;
+    --white: #fff;
+    --accentColor: #3369F3;
+    --errorColor: #FF2F2F;
     --mainFont: Roboto, sans-serif;
 }
