--- a/src/styles/root.css
+++ b/src/styles/root.css
@@ -1,5 +1,6 @@
 :root {
     --white: #fff;
+    --black: #1E1E1E;
     --accentColor: #3369F3;
     --secondaryColor: #999;
     --errorColor: #FF2F2F;
