--- a/express/templates/pages/chat/chat.html
+++ b/express/templates/pages/chat/chat.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../../styles/styles.css"/>
-    <link rel="stylesheet" href="./chat.css"/>
+    <link rel="stylesheet" href="../../../static/styles/styles.css"/>
+    <link rel="stylesheet" href="chat.css"/>
     <title>Chat</title>
 </head>
 <body class="row">
