--- a/express/templates/layout.pug
+++ b/express/templates/layout.pug
@@ -4,7 +4,9 @@ html(lang="ru")
     meta(charset='UTF-8')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     meta(http-equiv='X-UA-Compatible' content='ie=edge')
-    link(rel="stylesheet", href="./styles/styles.css")
+    link(rel="stylesheet", href="styles/styles.css")
+    link(rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon")
     title Messenger
+    block head
   body
     block content
