--- a/express/templates/pages/errors/404.html
+++ b/express/templates/pages/errors/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../../styles/styles.css" />
+    <link rel="stylesheet" href="../../../static/styles/styles.css" />
     <title>Error 404</title>
 </head>
 <body class="column content-center items-center">
