--- a/express/templates/pages/errors/505.pug
+++ b/express/templates/pages/errors/505.pug
@@ -1,8 +1,8 @@
-extends ../../layout.pug
+extends ../../layout
 
 block content
   body(class="column content-center items-center")
     div (class="text-center")
-      h1 404
-      p Не туда попали
+      h1 500
+      p Мы уже фиксим
       a Назад к чатам
