--- a/express/templates/pages/errors/505.pug
+++ b/express/templates/pages/errors/505.pug
@@ -2,7 +2,7 @@ extends ../../layout
 
 block content
   body(class="column content-center items-center")
-    div (class="text-center")
+    div(class="text-center")
       h1 500
       p Мы уже фиксим
-      a Назад к чатам
+      a(href="/") Назад к чатам
