--- a/express/templates/pages/chat/chat.pug
+++ b/express/templates/pages/chat/chat.pug
@@ -1,18 +1,19 @@
 extends ../../layout.pug
 
 append head
-  link(rel="stylesheet" href="/express/templates/pages/chat/chat.css")
+  style
+    include ./chat.css
 block content
   body(class="row")
   div(class="chats-wrapper relative")
     div(class="operations-wrapper column")
       span(class="operations-wrapper__profile row full-width content-end items-center")
-        a Профиль
+        a(href="/profile") Профиль
         svg(width="6" height="10" viewBox="0 0 6 10" fill="none" xmlns="http://www.w3.org/2000/svg")
           path(d="M1 9L5 5L1 1" stroke="#999999")
       input(class="operations-wrapper__search" type="text" placeholder="Поиск")
     div(class="chat-preview row relative")
-      img(class="chat-preview__img" src="")
+      img(class="chat-preview__img" src="/images/avatar.png" alt="Аватар пользователя")
       div(class="column items-start")
         span(class="chat-preview__name") Андрей
         span(class="chat-preview__body") Изображение
@@ -20,7 +21,7 @@ block content
       span(class="chat-preview__count absolute text-center") 4
   div(class="current-chat column content-center relative")
     div(class="current-chat__user row items-center absolute")
-      img(class="current-chat__user-avatar")
+      img(class="current-chat__user-avatar" src="/images/avatar1.png" alt="Аватар пользователя")
       span(class="current-chat__user-name") Вадим
       svg(class="current-chat__controls" width="3" height="16" viewBox="0 0 3 16" xmlns="http://www.w3.org/2000/svg")
         circle(cx="1.5" cy="2" r="1.5")
@@ -44,29 +45,29 @@ block content
                 line(x1="7.11078" y1="14.8891" x2="14.889" y2="7.11093" stroke="#3369F3"
                   stroke-width="1.5")
               span Удалить пользователя
-      span(class="text-center current-chat__info-message") Выберите чат чтобы отправить сообщение
-      span(class="current-chat__date text-center") 19 Июня
-      p(class="current-chat-message relative")
-        | Привет! Смотри, тут всплыл интересный кусок лунной космической истории — НАСА в какой-то момент попросила
-        | Хассельблад адаптировать модель SWC для полетов на Луну. Сейчас мы все знаем что астронавты летали с моделью 500
-        | EL — и к слову говоря, все тушки этих камер все еще находятся на поверхности Луны, так как астронавты с собой
-        | забрали только кассеты с пленкой.
-        | Хассельблад в итоге адаптировал SWC для космоса, но что-то пошло не так и на ракету они так никогда и не попали.
-        | Всего их было произведено 25 штук, одну из них недавно продали на аукционе за 45000 евро.
-        span(class="current-chat-message__date absolute") 11:59
-      p(class="current-chat-message current-chat-message_incoming relative") Круто!
-        span(class="current-chat-message__date absolute")
-          svg(width="11" height="5" viewBox="0 0 11 5" fill="none" xmlns="http://www.w3.org/2000/svg")
-            line(y1="-0.5" x2="3.765" y2="-0.5"
-              transform="matrix(0.705933 0.708278 -0.705933 0.708278 0.700195 2.33313)"
-              stroke="#3369F3")
-            line(y1="-0.5" x2="5.6475" y2="-0.5"
-              transform="matrix(0.705933 -0.708278 0.705933 0.708278 3.35828 5.00006)"
-              stroke="#3369F3")
-            line(y1="-0.5" x2="5.6475" y2="-0.5"
-              transform="matrix(0.705933 -0.708278 0.705933 0.708278 6.01587 5.00006)"
-              stroke="#3369F3")
-          | 11:59
+    span(class="text-center current-chat__info-message") Выберите чат чтобы отправить сообщение
+    span(class="current-chat__date text-center") 19 Июня
+    p(class="current-chat-message relative")
+      | Привет! Смотри, тут всплыл интересный кусок лунной космической истории — НАСА в какой-то момент попросила
+      | Хассельблад адаптировать модель SWC для полетов на Луну. Сейчас мы все знаем что астронавты летали с моделью 500
+      | EL — и к слову говоря, все тушки этих камер все еще находятся на поверхности Луны, так как астронавты с собой
+      | забрали только кассеты с пленкой.
+      | Хассельблад в итоге адаптировал SWC для космоса, но что-то пошло не так и на ракету они так никогда и не попали.
+      | Всего их было произведено 25 штук, одну из них недавно продали на аукционе за 45000 евро.
+      span(class="current-chat-message__date absolute") 11:59
+    p(class="current-chat-message current-chat-message_incoming relative") Круто!
+      span(class="current-chat-message__date absolute")
+        svg(width="11" height="5" viewBox="0 0 11 5" fill="none" xmlns="http://www.w3.org/2000/svg")
+          line(y1="-0.5" x2="3.765" y2="-0.5"
+            transform="matrix(0.705933 0.708278 -0.705933 0.708278 0.700195 2.33313)"
+            stroke="#3369F3")
+          line(y1="-0.5" x2="5.6475" y2="-0.5"
+            transform="matrix(0.705933 -0.708278 0.705933 0.708278 3.35828 5.00006)"
+            stroke="#3369F3")
+          line(y1="-0.5" x2="5.6475" y2="-0.5"
+            transform="matrix(0.705933 -0.708278 0.705933 0.708278 6.01587 5.00006)"
+            stroke="#3369F3")
+        | 11:59
     div(class="message-input row items-center absolute")
       a
         svg(width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg")
