--- a/src/layout.pug
+++ b/src/layout.pug
@@ -4,8 +4,8 @@ html(lang="ru")
     meta(charset='UTF-8')
     meta(name='viewport' content='width=device-width, initial-scale=1.0')
     meta(http-equiv='X-UA-Compatible' content='ie=edge')
-    link(rel="stylesheet", href="styles/styles.css")
-    link(rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon")
+    link(rel="stylesheet", href="/static/css/styles.css")
+    link(rel="shortcut icon" href="/static/images/favicon.ico" type="image/x-icon")
     title Messenger
     block head
   body
