--- a/src/pages/chat/chat.pug
+++ b/src/pages/chat/chat.pug
@@ -1,6 +1,6 @@
 extends ../../layout.pug
 
-append head
+block head
   style
     include ./chat.css
 block content
@@ -13,7 +13,7 @@ block content
           path(d="M1 9L5 5L1 1" stroke="#999999")
       input(class="operations-wrapper__search" type="text" placeholder="Поиск")
     div(class="chat-preview row relative")
-      img(class="chat-preview__img" src="/images/avatar.png" alt="Аватар пользователя")
+      img(class="chat-preview__img" src="/static/images/avatar1.png" alt="Аватар пользователя")
       div(class="column items-start")
         span(class="chat-preview__name") Андрей
         span(class="chat-preview__body") Изображение
@@ -21,7 +21,7 @@ block content
       span(class="chat-preview__count absolute text-center") 4
   div(class="current-chat column content-center relative")
     div(class="current-chat__user row items-center absolute")
-      img(class="current-chat__user-avatar" src="/images/avatar1.png" alt="Аватар пользователя")
+      img(class="current-chat__user-avatar" src="/static/images/avatar.png" alt="Аватар пользователя")
       span(class="current-chat__user-name") Вадим
       svg(class="current-chat__controls" width="3" height="16" viewBox="0 0 3 16" xmlns="http://www.w3.org/2000/svg")
         circle(cx="1.5" cy="2" r="1.5")
