- добавлены цсс линтеры - добавлен свг спрайт - добавлен конкурентли

--- a/src/components/modal/modal.pug
+++ b/src/components/modal/modal.pug
@@ -2,7 +2,7 @@ append head
   link(href="./modal.css")
 append content
 body(class="column content-center items-center")
-  div(class="modal modal_login radiused column")
+  div(class="modal modal-login radiused column")
     h2(class="modal__title text-center") Вход
       label(class="text-input" for="user_name")
         span(class="text-input__title") Логин
