--- a/src/pages/profile/profile.pug
+++ b/src/pages/profile/profile.pug
@@ -34,11 +34,11 @@ block content
         li(class="profile__item row content-between items-center")
           span Телефон
           span +7 (909) 967 30 30
-      ul(class="profile__info profile__info_controls")
+      ul(class="profile__info profile__info-controls")
         li(class="profile__item row content-between items-center")
           a(class="profile__item-link" href="") Изменить данные
         li(class="profile__item row content-between items-center")
           a(class="profile__item-link" href="") Изменить пароль
         li(class="profile__item row content-between items-center")
-          a(class="profile__item-link_special" href="") Выйти
+          a(class="profile__item-link--special" href="") Выйти
       button(class="profile__submit") Сохранить
