--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,96 +1,97 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 a {
-    text-decoration: none
+  text-decoration: none;
 }
 
-a:hover, button:hover {
-    opacity: .8;
-    cursor: pointer;
+a:hover,
+button:hover {
+  opacity: 0.8;
+  cursor: pointer;
 }
 
 ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .row {
-    display: flex;
+  display: flex;
 }
 
 .column {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .items-center {
-    align-items: center;
+  align-items: center;
 }
 
 .items-start {
-    align-items: flex-start;
+  align-items: flex-start;
 }
 
 .content-center {
-    justify-content: center;
+  justify-content: center;
 }
 
 .content-end {
-    justify-content: flex-end;
+  justify-content: flex-end;
 }
 
 .content-between {
-    justify-content: space-between;
+  justify-content: space-between;
 }
 
 .text-center {
-    text-align: center;
+  text-align: center;
 }
 
 .radiused {
-    border-radius: 12px;
+  border-radius: 12px;
 }
 
 .full-width {
-    width: 100%;
+  width: 100%;
 }
 
 .full-height {
-    height: 100%;
+  height: 100%;
 }
 
 .relative {
-    position: relative;
+  position: relative;
 }
 
 .absolute {
-    position: absolute;
+  position: absolute;
 }
 
 .absolute-top-right {
-    position: absolute;
-    top: 0;
-    right: 0;
+  position: absolute;
+  top: 0;
+  right: 0;
 }
 
 .absolute-top-left {
-    position: absolute;
-    top: 0;
-    left: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .absolute-bottom-right {
-    position: absolute;
-    bottom: 0;
-    right: 0;
+  position: absolute;
+  bottom: 0;
+  right: 0;
 }
 
 .absolute-centered {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
