--- a/static/css/fonts.css
+++ b/static/css/fonts.css
@@ -1,26 +1,29 @@
 /* roboto-regular - latin_cyrillic */
 @font-face {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
-    src: url('../../static/fonts/roboto-v29-latin_cyrillic-regular.eot'); /* IE9 Compat Modes */
-    src: local(''),
-    url('../../static/fonts/roboto-v29-latin_cyrillic-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-    url('../../static/fonts/roboto-v29-latin_cyrillic-regular.woff2') format('woff2'), /* Super Modern Browsers */
-    url('../../static/fonts/roboto-v29-latin_cyrillic-regular.woff') format('woff'), /* Modern Browsers */
-    url('../../static/fonts/roboto-v29-latin_cyrillic-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-    url('../../static/fonts/roboto-v29-latin_cyrillic-regular.svg#Roboto') format('svg'); /* Legacy iOS */
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 400;
+  src: url("../../static/fonts/roboto-v29-latin_cyrillic-regular.eot"); /* IE9 Compat Modes */
+  src:
+    local(""),
+    url("../../static/fonts/roboto-v29-latin_cyrillic-regular.eot?#iefix") format("embedded-opentype"),
+    url("../../static/fonts/roboto-v29-latin_cyrillic-regular.woff2") format("woff2"),
+    url("../../static/fonts/roboto-v29-latin_cyrillic-regular.woff") format("woff"),
+    url("../../static/fonts/roboto-v29-latin_cyrillic-regular.ttf") format("truetype"),
+    url("../../static/fonts/roboto-v29-latin_cyrillic-regular.svg#Roboto") format("svg"); /* Legacy iOS */
 }
+
 /* roboto-700 - latin_cyrillic */
 @font-face {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 700;
-    src: url('../../static/fonts/roboto-v29-latin_cyrillic-700.eot'); /* IE9 Compat Modes */
-    src: local(''),
-    url('../../static/fonts/roboto-v29-latin_cyrillic-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-    url('../../static/fonts/roboto-v29-latin_cyrillic-700.woff2') format('woff2'), /* Super Modern Browsers */
-    url('../../static/fonts/roboto-v29-latin_cyrillic-700.woff') format('woff'), /* Modern Browsers */
-    url('../../static/fonts/roboto-v29-latin_cyrillic-700.ttf') format('truetype'), /* Safari, Android, iOS */
-    url('../../static/fonts/roboto-v29-latin_cyrillic-700.svg#Roboto') format('svg'); /* Legacy iOS */
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 700;
+  src: url("../../static/fonts/roboto-v29-latin_cyrillic-700.eot"); /* IE9 Compat Modes */
+  src:
+    local(""),
+    url("../../static/fonts/roboto-v29-latin_cyrillic-700.eot?#iefix") format("embedded-opentype"),
+    url("../../static/fonts/roboto-v29-latin_cyrillic-700.woff2") format("woff2"),
+    url("../../static/fonts/roboto-v29-latin_cyrillic-700.woff") format("woff"),
+    url("../../static/fonts/roboto-v29-latin_cyrillic-700.ttf") format("truetype"),
+    url("../../static/fonts/roboto-v29-latin_cyrillic-700.svg#Roboto") format("svg"); /* Legacy iOS */
 }
