- добавлен тэг time

--- a/src/pages/chat/chat.pug
+++ b/src/pages/chat/chat.pug
@@ -48,7 +48,8 @@ block content
       | забрали только кассеты с пленкой.
       | Хассельблад в итоге адаптировал SWC для космоса, но что-то пошло не так и на ракету они так никогда и не попали.
       | Всего их было произведено 25 штук, одну из них недавно продали на аукционе за 45000 евро.
-      span(class="current-chat-message__date absolute") 11:59
+      span(class="current-chat-message__date absolute")
+        time 11:59
     p(class="current-chat-message current-chat-message__incoming relative") Круто!
       span(class="current-chat-message__date absolute")
         svg(width="11" height="5" viewBox="0 0 11 5" fill="none" xmlns="http://www.w3.org/2000/svg")
