--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -4,7 +4,7 @@
 @import "root.css";
 @import "base.css";
 
-body {
+#root {
   height: 100vh;
   background: var(--white);
   font-family: var(--mainFont);
