--- a/src/components/inputGroup/inputGroup.pug
+++ b/src/components/inputGroup/inputGroup.pug
@@ -1,5 +1,4 @@
 label(class="text-input" for=`${name}`)
   span(class="text-input__title") #{label}
   | !{input}
-  if !isValid
-    span(class="text-input__error") #{errorMessage}
+  | !{error}
