--- a/src/components/button/button.pug
+++ b/src/components/button/button.pug
@@ -1,1 +1,4 @@
-button(type=`${type ? type : 'submit'}`) #{label}
+if isActive
+  button(type=`${type ? type : 'submit'}` class='button radiused text-center full-width') #{label}
+else
+  button(type=`${type ? type : 'submit'}` class='button radiused text-center full-width disabled') #{label}
