--- a/src/pages/profile/profile.pug
+++ b/src/pages/profile/profile.pug
@@ -7,7 +7,7 @@ div(class="profile column items-center content-center text-center full-width")
   div(class="profile__data")
     div(class="profile__img-wrapper relative")
       span(class="profile__img-change absolute-centered") Поменять<br/>аватар
-      img(class="profile__img" height="130" width="130" src="/images/avatar1.png" alt="Аватар пользователя")
+      img(class="profile__img" height="130" width="130" src="../../../static/images/avatar1.png" alt="Аватар пользователя")
     h3(class="profile__title") Иван
     ul(class="profile__info")
       each dataUser in userData
