--- a/src/components/modal/modal.pug
+++ b/src/components/modal/modal.pug
@@ -1,6 +1,6 @@
 form(class="column content-center items-center full-width" name="form")
   div(class="modal modal-login radiused column")
-    h2(class="modal__title text-center") #{label}
+    h2(class="modal__title text-center") #{title}
     each inputGroup in inputGroups
       | !{inputGroup}
     | !{button}
