--- a/static/css/base.css
+++ b/static/css/base.css
@@ -95,3 +95,22 @@ ul {
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+.disabled {
+  pointer-events: none;
+  opacity: 0.4;
+}
+
+.fixed {
+  position: fixed;
+}
+
+.fixed-right-top {
+  position: fixed;
+  top: 0;
+  right: 0;
+}
+
+.z10 {
+  z-index: 10;
+}
