--- a/src/pages/error/error.pug
+++ b/src/pages/error/error.pug
@@ -2,4 +2,4 @@ div(class="column content-center items-center full-width")
   div(class="text-center")
     h1 #{label}
     p #{subLabel}
-    a(href="/") Назад к чатам
+    a(data-href=`/${href}` href=`/${href}`) Назад к чатам
