--- a/src/components/modal/modal.pug
+++ b/src/components/modal/modal.pug
@@ -1,8 +1,10 @@
 form(class="column content-center items-center full-width" name="form")
   div(class="modal modal-login radiused column")
     h2(class="modal__title text-center") #{title}
-    each inputGroup in inputGroups
-      | !{inputGroup}
-    | !{button}
-    div(class="text-center full-width")
-      a(class="modal__link" data-href=`/${link.goTo}` href=`/${link.goTo}`) #{link.title}
+    if inputGroups && inputGroups.length
+      each inputGroup in inputGroups
+        | !{inputGroup}
+      | !{button}
+      div(class="text-center full-width")
+        if link
+          a(class="modal__link" data-href=`/${link.goTo}` href=`/${link.goTo}`) #{link.title}
