--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -9,9 +9,9 @@
   margin-bottom: 40px;
 }
 
-.modal-login {
-  min-height: 460px;
-}
+/*.modal-login {*/
+/*  min-height: 460px;*/
+/*}*/
 
 .text-input {
   display: block;
