--- a/src/components/modal/modal.pug
+++ b/src/components/modal/modal.pug
@@ -8,3 +8,4 @@ form(class="column content-center items-center full-width" name="form" enctype="
       if link.goTo || link.title
         div(class="text-center full-width")
           a(class="modal__link" data-href=`/${link.goTo}` href=`/${link.goTo}`) #{link.title}
+    | !{serverError}
