--- a/src/pages/profile/profile.pug
+++ b/src/pages/profile/profile.pug
@@ -1,19 +1,17 @@
 div(class="profile column items-center content-center text-center full-width")
   | !{goBackButton}
-  div(class="profile__data")
-    div(class="profile__img-wrapper relative")
-      span(class="profile__img-change absolute-centered") Поменять<br/>аватар
-      img(class="profile__img" height="130" width="130" src="../../../static/images/avatar1.png" alt="Аватар пользователя")
-    h3(class="profile__title") #{userName}
-  if userData
-    ul(class="profile__info")
-      each dataUser in userData
-        li(class="profile__item row content-between items-center")
-          span #{dataUser.key}
-          span #{dataUser.value}
-  if userActions
-    ul(class="profile__info profile__info-controls")
-        each userAction, i in userActions
-          li(class="profile__item row content-between items-center")
-             a(class=`${i === userActions.length - 1 ? 'profile__item-link--special' : 'profile__item-link'}` data-href=`/${userAction.action}`) #{userAction.key}
-    | !{button}
+  form(class="column")
+    div(class="profile__data")
+      div(class="profile__img-wrapper relative")
+        span(class="profile__img-change absolute-centered") Поменять<br/>аватар
+        img(class="profile__img" height="130" width="130" src="../../../static/images/avatar1.png" alt="Аватар пользователя")
+      h3(class="profile__title") #{userName}
+    | !{profileInputsList}
+    | !{profileError}
+    if userActions
+      ul(class="profile__info profile__info-controls")
+          each userAction, i in userActions
+            li(class="profile__item row content-between items-center")
+               a(class=`${i === userActions.length - 1 ? 'profile__item-link--special' : 'profile__item-link'}` data-href=`/${userAction.action}`) #{userAction.key}
+      div(class="self-center")
+        | !{button}
