--- a/src/pages/profile/profile.pug
+++ b/src/pages/profile/profile.pug
@@ -1,10 +1,9 @@
-div(class="profile column items-center content-center text-center full-width")
+div(class="profile column items-center content-center text-center full-width relative")
   | !{goBackButton}
-  form(class="column")
+  form(class="column" enctype="multipart/form-data")
     div(class="profile__data")
-      div(class="profile__img-wrapper relative")
-        span(class="profile__img-change absolute-centered") Поменять<br/>аватар
-        img(class="profile__img" height="130" width="130" src="../../../static/images/avatar1.png" alt="Аватар пользователя")
+      div(class="profile__img-wrapper relative" data-href="/changeAvatar")
+        | !{avatar}
       h3(class="profile__title") #{userName}
     | !{profileInputsList}
     | !{profileError}
@@ -15,3 +14,4 @@ div(class="profile column items-center content-center text-center full-width")
                a(class=`${i === userActions.length - 1 ? 'profile__item-link--special' : 'profile__item-link'}` data-href=`/${userAction.action}`) #{userAction.key}
       div(class="self-center")
         | !{button}
+  | !{changePassModal}
