Добавил возможность поиска по пользователям

--- a/src/pages/chat/chat.pug
+++ b/src/pages/chat/chat.pug
@@ -1,4 +1,5 @@
 div(class="row")
+  | !{addUser}
   div(class="chats-wrapper relative")
     div(class="operations-wrapper column")
       | !{chatOperations}
