--- a/src/components/inputGroup/fragments/input/input.pug
+++ b/src/components/inputGroup/fragments/input/input.pug
@@ -1,1 +1,1 @@
-input(class="text-input__input" id=`${name}` name=`${name}` type="text" value=`${value}`)
+input(class=`text-input__input ${classList}` id=`${name}` name=`${name}` type="text" value=`${value}`)
