--- a/src/pages/chat/chat.pug
+++ b/src/pages/chat/chat.pug
@@ -9,12 +9,5 @@ div(class="row")
       | !{chatHeader}
       | !{chatControls}
       a(class="chat-controls-icon" data-href="chat-controls")
-    span(class="text-center current-chat__info-message") Выберите чат чтобы отправить сообщение
-    span(class="current-chat__date text-center") 19 Июня
-    each chat in chatData
-      p(class=`current-chat-message relative ${!chat.isMy && 'current-chat-message__incoming'}`) #{chat.message}
-        span(class="current-chat-message__date absolute")
-          svg(width="11" height="5" viewBox="0 0 11 5" fill="none" xmlns="http://www.w3.org/2000/svg")
-            use(href="#ticks")
-          time #{chat.time}
+    | !{messagesList}
     | !{chatInput}
