--- a/src/pages/chat/fragments/chatPreview/chatPreview.css
+++ b/src/pages/chat/fragments/chatPreview/chatPreview.css
@@ -55,4 +55,8 @@
   font-size: 14px;
   line-height: 16px;
   color: var(--secondaryColor);
+  max-width: 92px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
