--- a/src/pages/chat/chat.pug
+++ b/src/pages/chat/chat.pug
@@ -3,6 +3,7 @@ div(class="row")
     div(class="operations-wrapper column")
       | !{chatOperations}
     | !{chatPreview}
+    button(class="init-chat-button" data-href="chat-init")
   div(class="current-chat column content-center relative")
     div(class="current-chat__user row items-center absolute")
       | !{chatHeader}
