--- a/src/pages/chat/chat.pug
+++ b/src/pages/chat/chat.pug
@@ -1,11 +1,10 @@
-div(class="row")
+div(class="row full-width")
   | !{addUser}
   div(class="chats-wrapper relative")
     div(class="operations-wrapper column")
       | !{chatOperations}
     | !{chatPreview}
-    button(class="init-chat-button" data-href="chat-init")
-  div(class="current-chat column content-center relative")
+  div(class=`current-chat column content-center relative ${isMessagesLoading ? 'current-chat--loading' : ''}`)
     div(class="current-chat__user row items-center absolute")
       | !{chatHeader}
       | !{chatControls}
