--- a/src/pages/chat/fragments/chatHeader/chatHeader.pug
+++ b/src/pages/chat/fragments/chatHeader/chatHeader.pug
@@ -1,3 +1,3 @@
 div(class='row items-center')
-  img(class="current-chat__user-avatar" src="/static/images/avatar.png" alt="Аватар пользователя")
+  object(class="current-chat__user-avatar" type="image/png" src="/static/images/avatar.png")
   span(class="current-chat__user-name") #{userName}
