--- a/src/pages/chat/fragments/chatPreview/chatPreview.css
+++ b/src/pages/chat/fragments/chatPreview/chatPreview.css
@@ -26,7 +26,7 @@
 }
 
 .chat-preview__time {
-  top: 10px;
+  bottom: 10px;
   right: 10px;
   font-size: 12px;
   color: var(--secondaryColor);
@@ -41,7 +41,7 @@
   font-size: 14px;
   line-height: 21px;
   right: 10px;
-  bottom: 10px;
+  top: 10px;
 }
 
 .chat-preview__name {
@@ -59,4 +59,8 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+}
+
+.chat-preview--isChosen {
+  background: aliceblue;
 }
