--- a/src/pages/chat/fragments/messagesList/messagesList.pug
+++ b/src/pages/chat/fragments/messagesList/messagesList.pug
@@ -1,9 +1,11 @@
-div(class="full-width")
-  span(class="text-center current-chat__info-message") Выберите чат чтобы отправить сообщение
-  span(class="current-chat__date text-center") 19 Июня
-  each chat in chatData
-    p(class=`current-chat-message relative ${!chat.isMy && 'current-chat-message__incoming'}`) #{chat.message}
-      span(class="current-chat-message__date absolute")
-        svg(width="11" height="5" viewBox="0 0 11 5" fill="none" xmlns="http://www.w3.org/2000/svg")
-          use(href="#ticks")
-        time #{chat.time}
+div(class="full-width column current-chat-message-wrapper")
+  if messages
+    each message in messages
+      p(class=`current-chat-message relative ${message.user_id === currentUserId ? '' : 'current-chat-message__incoming'}`) #{message.content}
+        span(class="current-chat-message__date absolute")
+          time !{moment(message.time).format("HH:mm")}
+          svg(width="11" height="5" viewBox="0 0 11 5" fill="none" xmlns="http://www.w3.org/2000/svg")
+            use(href="#ticks")
+  else
+    span(class="text-center current-chat__info-message current-chat__info-messageCentered absolute") Выберите чат чтобы отправить сообщение
+    //span(class="current-chat__date text-center") 19 Июня
