добавил логику обновления чатов

--- a/src/pages/chat/fragments/chatHeader/chatHeader.pug
+++ b/src/pages/chat/fragments/chatHeader/chatHeader.pug
@@ -1,3 +1,3 @@
 div(class='row items-center')
-  object(class="current-chat__user-avatar" type="image/png" src="/static/images/avatar.png")
+  object(class="current-chat__user-avatar" type="image/png" data=`${resourcesUrl}`)
   span(class="current-chat__user-name") #{userName}
