--- a/src/components/addUser/addUser.css
+++ b/src/components/addUser/addUser.css
@@ -1,5 +1,5 @@
 .add-user {
-    width: 500px;
+    width: 340px;
     height: 700px;
     position: absolute;
     top: 50%;
@@ -10,16 +10,31 @@
     box-shadow: 0 0 6px rgb(0 0 0 / 14%);
     border-radius: 12px;
     z-index: 1;
+    overflow: hidden;
+}
+
+.add-user h1 {
+  font-size: 20px;
+  line-height: 22px;
+  margin-bottom: 38px;
+}
+
+.add-user p {
+    margin: 0;
+    font-size: 10px;
+    line-height: 12px;
+    text-align: left;
+    color: var(--secondaryColor);
+    margin-bottom: 20px;
 }
 
 .add-user-input {
     width: 100%;
     padding: 6px;
-    line-height: 15px;
-    border: 1px solid var(--black);
-    font-size: 20px;
-    line-height: 20px;
-    margin-bottom: 20px;
+    font-size: 14px;
+    line-height: 16px;
+    margin-bottom: 10px;
+    border-bottom: 1px solid var(--accentColor);
 }
  
 .add-user-close-button {
