--- a/src/pages/chat/fragments/chatInput/chatInput.css
+++ b/src/pages/chat/fragments/chatInput/chatInput.css
@@ -3,6 +3,11 @@
   left: 20px;
   width: calc(100% - 40px);
   padding: 10px 0;
+  background-color: var(--white);
+}
+
+.message-input::-webkit-scrollbar {
+  display: none;
 }
 
 .message-input button {
