--- a/src/pages/chat/fragments/messagesList/messagesList.css
+++ b/src/pages/chat/fragments/messagesList/messagesList.css
@@ -1,3 +1,24 @@
+.current-chat-message-outer-wrapper {
+  overflow: hidden;
+}
+
+.current-chat-message-wrapper {
+  height: calc(100vh - 118px);
+}
+
+.current-chat-message-inner-wrapper {
+  width: calc(100% + 17px);
+  overflow-y: scroll;
+  overflow-x: hidden;
+  padding-right: 4px;
+  margin-top: auto;
+}
+
+.current-chat-message__date {
+  right: 11px;
+  bottom: 11px;
+}
+
 .current-chat-message {
   margin-top: auto;
   max-width: 50%;
@@ -10,17 +31,6 @@
   color: var(--black);
   margin-right: auto;
   padding-right: 60px;
-}
-
-.current-chat-message-wrapper {
-  padding-bottom: 55px;
-  overflow: hidden;
-  margin-top: auto;
-}
-
-.current-chat-message__date {
-  right: 11px;
-  bottom: 11px;
 }
 
 .current-chat-message__incoming {
