--- a/src/pages/chat/fragments/messagesList/messagesList.pug
+++ b/src/pages/chat/fragments/messagesList/messagesList.pug
@@ -1,11 +1,13 @@
-div(class="full-width column current-chat-message-wrapper")
-  if messages
-    each message in messages
-      p(class=`current-chat-message relative ${message.user_id === currentUserId ? '' : 'current-chat-message__incoming'}`) #{message.content}
-        span(class="current-chat-message__date absolute")
-          time !{moment(message.time).format("HH:mm")}
-          svg(width="11" height="5" viewBox="0 0 11 5" fill="none" xmlns="http://www.w3.org/2000/svg")
-            use(href="#ticks")
-  else
-    span(class="text-center current-chat__info-message current-chat__info-messageCentered absolute") Выберите чат чтобы отправить сообщение
-    //span(class="current-chat__date text-center") 19 Июня
+div(class="full-width column current-chat-message-outer-wrapper")
+  div(class="full-width column current-chat-message-wrapper")
+    div(class="full-width column current-chat-message-inner-wrapper")
+      if messages
+        each message in messages
+          p(class=`current-chat-message relative ${message.user_id === currentUserId ? '' : 'current-chat-message__incoming'}`) #{message.content}
+            span(class="current-chat-message__date absolute")
+              time !{moment(message.time).format("HH:mm")}
+              svg(width="11" height="5" viewBox="0 0 11 5" fill="none" xmlns="http://www.w3.org/2000/svg")
+                use(href="#ticks")
+      else
+        span(class="text-center current-chat__info-message current-chat__info-messageCentered absolute") #{haveChats ? 'Выберите чат чтобы отправить сообщение' : 'Что бы начать чат добавьте пользователя'}
+        //span(class="current-chat__date text-center") 19 Июня
