--- a/src/pages/profile/fragments/profileInputsList/profileInputsList.pug
+++ b/src/pages/profile/fragments/profileInputsList/profileInputsList.pug
@@ -1,5 +1,6 @@
 ul(class=`profile__info ${isEdit ? 'profile__info--isEdit' : 'profile__info--noEdit'}`)
-  each dataUser in userData
-    li(class="profile__item row content-between items-center")
-      span #{dataUser.key}
-      input(value=`${dataUser.value}` name=`${dataUser.name}`)
+  if userData
+    each dataUser in userData
+      li(class="profile__item row content-between items-center")
+        span #{dataUser.key}
+        input(value=`${dataUser.value}` name=`${dataUser.name}`)
