переписал модалку и начал переписывать контроллер чата

--- a/src/components/popUp/styles.css
+++ b/src/components/popUp/styles.css
@@ -5,6 +5,7 @@
     padding: 50px 30px 30px;
     box-shadow: 0 0 6px rgb(0 0 0 / 14%);
     border-radius: 12px;
+    background-color: var(--white);
 }
   
 .popup__title {
@@ -12,7 +13,7 @@
     margin-bottom: 40px;
 }
 
-@keyframes slidein {
+/* @keyframes slidein {
   from {
     margin-left: 100%;
     width: 300%;
@@ -22,48 +23,5 @@
     margin-left: 0%;
     width: 100%;
   }
-}
-  
-  /* .text-input {
-    display: block;
-    margin-bottom: 20px;
-    height: 36px;
-    border-bottom: 1px solid var(--accentColor);
-    position: relative;
-  }
-  
-  .text-input__label:last-of-type {
-    margin-bottom: 0;
-  }
-  
-  .text-input__title {
-    font-size: 9px;
-    line-height: 11px;
-    color: #999;
-    position: absolute;
-    left: 0;
-    top: 0;
-  }
-  
-  .text-input__input {
-    width: 100%;
-    padding: 15px 0 6px;
-    font-size: 13px;
-    line-height: 15px;
-  }
-  
-  .text-input__error {
-    color: var(--errorColor);
-    font-size: 10px;
-    line-height: 12px;
-    position: absolute;
-    left: 0;
-    bottom: -14px;
-  }
-  
-  .modal__link {
-    color: var(--accentColor);
-    font-size: 11px;
-    line-height: 13px;
-  } */
+} */
   
