--- a/src/pages/chat/fragments/chatControls/chatControls.css
+++ b/src/pages/chat/fragments/chatControls/chatControls.css
@@ -3,9 +3,9 @@
   border-radius: 12px;
   background: var(--white);
   box-shadow: 0 0 6px rgb(0 0 0 / 14%);
-  right: 0;
-  bottom: -100%;
   z-index: 1;
+  right: -6px;
+   top: 6px;
 }
 
 .controls-popup span {
@@ -20,6 +20,6 @@
   margin-bottom: 16px;
 }
 
-.controls-popup__icon--add-user {
+.controls-popup__icon--add {
   transform: rotate(45deg);
 }
