--- a/src/pages/chat/fragments/chatControls/chatControls.pug
+++ b/src/pages/chat/fragments/chatControls/chatControls.pug
@@ -5,6 +5,6 @@ div
         each control, i in controls
           li
             a(class="row items-center" data-href=`${control.href}`)
-              svg(class=`controls-popup__icon ${i === 0 && 'controls-popup__icon--add-user'}` width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg")
+              svg(class=`controls-popup__icon ${i !== 2 && 'controls-popup__icon--add'}` width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg")
                 use(href=`#${control.icon}`)
               span #{control.text}
