--- a/src/components/button/template.pug
+++ b/src/components/button/template.pug
@@ -1,2 +1,2 @@
 div(class=`${isActive ? 'active' : 'disabled'}`)
-  button(type=`${type === 'submit' ? 'submit' : 'button'}` data-link=`${data && type === 'link' ? data : ''}` class=`button radiused text-center full-width ${type ? `button--${type}` : ''}`) #{value}
+  button(type=`${type === 'submit' ? 'submit' : 'button'}` data-href=`${href ? href : ""}` data-link=`${data && type === 'link' ? data : ''}` class=`button radiused text-center full-width ${type ? `button--${type}` : ''}`) #{value}
