--- a/src/components/input/template.pug
+++ b/src/components/input/template.pug
@@ -1,1 +1,1 @@
-input(class=`text-input__input ${classList}` id=`${name}` name=`${name}` type="text" value=`${value ? value : ''}` placeholder=`${placeholder ? placeholder : ''}`)
+input(class=`text-input__input ${classList}` id=`${name}` name=`${name}` type="text" value=`${value ? value : ''}` placeholder=`${placeholder ? placeholder : ''}` autofocus)
