--- a/src/pages/chat/fragments/chatInput/chatInput.pug
+++ b/src/pages/chat/fragments/chatInput/chatInput.pug
@@ -4,7 +4,7 @@ form
       button
         svg(width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg")
           use(href="#paperClip")
-      input(class="message-input__text full-width" placeholder="Сообщение" name="message" type="text")
+      input(class="message-input__text full-width" placeholder="Сообщение" name="message" type="text" autofocus=true)
       button(type="submit" data-href="send-message")
         svg(class="message-input__submit" width="28" height="28" viewBox="0 0 28 28" fill="none"
           xmlns="http://www.w3.org/2000/svg")
