--- a/src/pages/chat/fragments/messagesList/messagesList.css
+++ b/src/pages/chat/fragments/messagesList/messagesList.css
@@ -21,8 +21,10 @@
 
 .current-chat-message {
   margin-top: auto;
-  max-width: 50%;
+  max-width: 400px;
+  width: fit-content;
   font-size: 12px;
+  max-height: 140px;
   line-height: 14px;
   background: #f8f8f8;
   padding: 11px;
@@ -31,6 +33,8 @@
   color: var(--black);
   margin-right: auto;
   padding-right: 60px;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .current-chat-message__incoming {
