--- a/src/pages/chat/fragments/messagesList/messagesList.pug
+++ b/src/pages/chat/fragments/messagesList/messagesList.pug
@@ -1,7 +1,7 @@
 div(class="full-width column current-chat-message-outer-wrapper")
   div(class="full-width column current-chat-message-wrapper")
     div(class="full-width current-chat-message-inner-wrapper")
-      if messages
+      if messages && openedChat
         if messages.length === 0
           span(class="text-center current-chat__info-message current-chat__info-messageCentered absolute") Напишите что нибудь
         else
