--- a/src/components/inputGroup/fragments/error/template.pug
+++ b/src/components/inputGroup/fragments/error/template.pug
@@ -1,4 +1,4 @@
 if !isValid
-  span(class=`text-input__labelError ${isModalError ? 'text-input__modalError' : ''}`) #{errorMessage}
+  span(class=`text-input__label-error ${isModalError ? 'text-input__modal-error' : ''}`) #{errorMessage}
 else
   span
