--- a/src/pages/profile/fragments/profileInputsList/profileInputsList.pug
+++ b/src/pages/profile/fragments/profileInputsList/profileInputsList.pug
@@ -1,4 +1,4 @@
-ul(class=`profile__info ${isEdit ? 'profile__info--isEdit' : 'profile__info--noEdit'}`)
+ul(class=`profile__info ${isEdit ? 'profile__info--is-edit' : 'profile__info--noEdit'}`)
   if userInputsData
     each dataUser in userInputsData
       li(class="profile__item row content-between items-center")
