--- a/src/pages/profile/profile.css
+++ b/src/pages/profile/profile.css
@@ -1,6 +1,6 @@
 .profile__side {
   width: 64px;
-  border-right: 1px solid #eaeaea;
+  border-right: 1px solid var(--devider);
 }
 
 .profile__img-wrapper {
