--- a/src/components/usersList/usersList.css
+++ b/src/components/usersList/usersList.css
@@ -1,14 +1,14 @@
-.userList-link {
-    display: block;
-    padding: 6px 6px 6px 0;
-    max-width: 280px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    font-size: 14px;
-    line-height: 16px;
-    font-weight: 500;
+.user-list-link {
+  display: block;
+  padding: 6px 6px 6px 0;
+  max-width: 280px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-size: 14px;
+  line-height: 16px;
+  font-weight: 500;
 }
 
-.userList-link span {
-    pointer-events: none;
+.user-list-link span {
+  pointer-events: none;
 }
