--- a/src/components/usersList/usersList.pug
+++ b/src/components/usersList/usersList.pug
@@ -2,6 +2,6 @@ div(class="full-width")
   if usersList
     ul(class="full-width")
         each user in usersList
-            li 
-                a(class="userList-link" data-href='add-user-to-chat' data-new-chat-user-id=`${user.id}`)
+            li
+                a(class="user-list-link" data-href='add-user-to-chat' data-new-chat-user-id=`${user.id}`)
                     span #{user.login}
