--- a/src/components/popUp/template.pug
+++ b/src/components/popUp/template.pug
@@ -1,4 +1,4 @@
-form(class="popup column content-center items-center full-width" name="form" enctype="multipart/form-data")
+form(class="popup column content-center items-center full-width" name="form" enctype="multipart/form-data" data-testingId=`${type}Page`)
   div(class="radiused column")
     if title
       h2(class="popup__title text-center") #{title} 
