--- a/src/pages/error/error.pug
+++ b/src/pages/error/error.pug
@@ -1,4 +1,4 @@
-div(class="column content-center items-center full-width")
+div(class="column content-center items-center full-width" data-test-id="error")
   div(class="text-center")
     h1 #{label}
     p #{subLabel}
