--- a/src/pages/profile/profile.pug
+++ b/src/pages/profile/profile.pug
@@ -1,4 +1,4 @@
-div(class="profile column items-center content-center text-center full-width relative")
+div(class="profile column items-center content-center text-center full-width relative" data-test-id="profile")
   | !{goBackButton}
   div(class="column")
     div(class="profile__data")
