--- a/src/pages/chat/chat.pug
+++ b/src/pages/chat/chat.pug
@@ -1,4 +1,4 @@
-div(class="row full-width")
+div(class="row full-width" data-test-id="chat")
   | !{addUser}
   div(class="chats-wrapper relative")
     div(class="operations-wrapper column")
